# Peridot

./: .gitignore  CMakeLists.txt  peridot.c  source.c
include/: peridot.h  peridot_defines.h  peridot_matrix.h  peridot_matrix.hpp  peridot_projection.h  peridot_quaternion.h  peridot_quaternion.hpp  peridot_transform.h  peridot_transform.hpp  peridot_vector.h  peridot_vector.hpp
include/Peridot/: peridot.h  peridot_matrix.h  peridot_quaternion.hpp  peridot_vector.h
src/: core.c  defines.h
